extension/content.css
#pin_FixYTPlayer {
  display: block;
  margin: 10px;
  position: absolute;
  top: 0;
  left: 0;
  width: 30px;
  height: 30px;
  z-index: 1200;

  opacity: 1;
  transition: all 0.3s;

  fill: #999;
  fill-opacity: .85;
  stroke: #fff;
  stroke-opacity: .85;
  stroke-width: 4px;

  cursor: pointer;
}

.ytp-autohide #pin_FixYTPlayer {
  opacity: 0;
}

.fixed_FixYTPlayer #pin_FixYTPlayer {
  fill: #fff;
  stroke: #777;
}

#pin_FixYTPlayer:hover {
  filter: brightness(1.2);
}

.fixed_FixYTPlayer #player-theater-container {
  position: fixed !important;
  z-index: 10000;
}

.fixed_FixYTPlayer #player {
  position: fixed !important;
  height: var(--fytp-player-height);
  width: var(--fytp-primary-colomn-width);
  z-index: 10000;
}

.fixed_FixYTPlayer #below {
  padding-top: var(--fytp-player-height);
}

.fixed_FixYTPlayer ytd-watch-flexy[theater] #below {
  padding-top: inherit;
}

.fixed_FixYTPlayer ytd-watch-flexy[theater] #columns {
  padding-top: clamp(480px, 56.25vw, calc(100vh - 169px));
}

.html5-video-container {
  z-index: 40 !important;
}

